prepared for merging

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -15,7 +15,7 @@ Our AIC CTU system (Figure~\ref{fig:pipeline}), adapted for \averitec{} from our
 %\vspace{-.5em}
 \begin{minipage}{\linewidth}
     \centering
-    \includegraphics[width=\linewidth]{figures/pipeline.pdf}
+    \includegraphics[width=\linewidth]{figures/pipeline2025.pdf}
     \captionof{figure}{Our refreshed fact-checking pipeline used in CTU AIC FEVER 8 submission, adapted from~\citealt{ullrich-etal-2024-aic}.}
     \label{fig:pipeline}
 \vspace{1em}
