--- a/src/conclusions.tex
+++ b/src/conclusions.tex
@@ -12,6 +12,6 @@ We encourage further usage of our system as a strong and easy-to-setup baseline 
 
 \subsection{Future works}
 \begin{enumerate}
-    \item Integrate a live search API as in~\cite{malon-2024-multi} as a retriever into the AIC pipeline (Figure~\ref{fig:pipeline}) to achieve a real-world generalization
+    \item Integrate a live search API as in~\cite{malon-2024-multi} as a retriever into the AIC pipeline (Figure~\ref{fig:pipeline2025}) to achieve a real-world generalization
     \item Section~\ref{sec:score} suggests to look at the key differences between legacy and \evr{} scoring methods in terms of the available 2024 AVeriTeC leaderboard and available model documentations -- we believe this could reveal valuable hints both scoring and pipelinne improvements in future work
 \end{enumerate}
