--- a/custom.bib
+++ b/custom.bib
@@ -484,3 +484,13 @@ url={https://doi.org/10.1007/s10579-023-09654-3}
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2501.12948}, 
 }
+
+@misc{cao2025averimatecdatasetautomaticverification,
+      title={AVerImaTeC: A Dataset for Automatic Verification of Image-Text Claims with Evidence from the Web}, 
+      author={Rui Cao and Zifeng Ding and Zhijiang Guo and Michael Schlichtkrull and Andreas Vlachos},
+      year={2025},
+      eprint={2505.17978},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2505.17978}, 
+}
