--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -4,14 +4,14 @@
 
 
 \section{Introduction}
-TODO: averitec 2024 proved that factchecking can be done on long text with proprietary blackbox llms averitec 2 2025 showed that it can also be solved using open-weights models on reasonable resources, this year, we tackle (cite Rui) a problem of image-text misinformation.
+TODO: averitec 2024 proved that factchecking can be done on long text with proprietary blackbox llms averitec 2 2025 showed that it can also be solved using open-weights models on reasonable resources, this year, we tackle~\cite{cao2025averimatecdatasetautomaticverification} a problem of image-text misinformation.
 
 %\vspace{-.5em}
 \begin{minipage}{\linewidth}
     \centering
     %\includegraphics[width=\linewidth]{figures/AVERIMATEC.drawio.png}
     \includegraphics[width=\linewidth]{figures/pipeline2026.pdf}
-    \captionof{figure}{Our refreshed fact-checking pipeline used in CTU AIC AVerImaTeC submission, adapted from~\citealt{ullrich-etal-2024-aic}.}
+    \captionof{figure}{Our refreshed image-text fact-checking pipeline used in CTU AIC AVerImaTeC submission, adapted from~\citealt{ullrich-drchal-2025-aic}.}
     \label{fig:pipeline2026}
 \vspace{1em}
 \end{minipage}
