--- a/emnlp2023.tex
+++ b/emnlp2023.tex
@@ -99,7 +99,9 @@ Prague, Czech Republic\\
 \begin{abstract}
 In this paper, we present our 3rd place system in the AVerImaTeC shared task, which combines our last year's retrieval-augmented generation (RAG) pipeline with a simple image similarity based retrieval module.
 
-Despite its simplicity, our system yields competitive performance at just \$0.03 per fact-check using GPT5.1 via OpenAI batch API. 
+Despite its simplicity, our system yields competitive performance at just \$0.03 per fact-check using GPT5.1 via OpenAI batch API.
+Our system is also easy to reproduce, as it only consists of two straightforward retrievers and a promnpt for evidence and label generation, which is why we suggest it as an accesible starting point for further experimentation.
+We publish the code\footnote{\url{https://github.com/heruberuto/AVerImaTec\_Shared\_Task}} and prompts, as well as our vector stores and insights into the scheme's running costs and directions for further improvement.
 
 \end{abstract}
 
